<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Viviano</string>
    <string name="raiting">5</string>
    <string name="menu_about">About</string>
    <string name="menu_contacto">Contacto</string>
    <string name="texto_contacto">Contacto</string>
    <string name="texto_about">About</string>

    <!-- About-->
    <string name="about_title">Autor</string>
    <string name="about_text">Hola!, mi nombre es Vicente Ruiz. Soy estudiante de la UNAM cursando el décimo semestre de la carrera
        de Ingeniería en Computación. Muchas gracias por ofrecerme parte de tu tiempo para revisar
        mi trabajo. #STAYHOME</string>

    <!-- Contacto -->
    <string name="contact_title">Escríbenos!</string>
    <string name="name">Nombre: </string>
    <string name="input_name">Nombre</string>
    <string name="email">Correo: </string>
    <string name="input_email">Correo</string>
    <string name="message">Mensaje: </string>
    <string name="input_message">Mensaje</string>
    <string name="send_email">Enviar</string>

</resources>