<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContactoActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:elevation="@dimen/elevacion_actionbar"
            />


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/designLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/tvTituloContac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBrown"
            android:textSize="50sp"
            android:fontFamily="@font/lazymonday"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            >

            <ImageView
                android:id="@+id/imgvName"
                android:layout_width="@dimen/icon_name"
                android:layout_height="@dimen/icon_name"
                android:src="@drawable/nombre"
                android:layout_gravity="center"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_marginLeft="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_name"
                    android:fontFamily="@font/constella"
                    android:textSize="30dp"
                    android:layout_gravity="bottom"
                    android:maxLines="4"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            >

            <ImageView
                android:id="@+id/imgvEmail"
                android:layout_width="@dimen/icon_contact"
                android:layout_height="@dimen/icon_contact"
                android:src="@drawable/email"
                android:layout_gravity="center"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCorreo"
                    android:layout_marginLeft="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email"
                    android:fontFamily="@font/constella"
                    android:textSize="30dp"
                    android:layout_gravity="bottom"
                    android:maxLines="4"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="60dp"
            >

            <ImageView
                android:id="@+id/imgvDescription"
                android:layout_width="@dimen/icon_contact"
                android:layout_height="@dimen/icon_contact"
                android:src="@drawable/description"
                android:layout_gravity="center"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMensaje"
                    android:layout_marginLeft="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_message"
                    android:fontFamily="@font/constella"
                    android:textSize="30dp"
                    android:layout_gravity="bottom"
                    android:maxLines="4"
                    android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:theme="@style/MiBotonRaised"
            />

    </LinearLayout>

</LinearLayout>